# poco

./: .gitignore
.github/workflows/: prebuild.yml
Crypto/src/: OpenSSLInitializer.cpp
Foundation/include/Poco/: Foundation.h
cmake/: FindOpenSSL.cmake
openssl/: arm-build.txt  build-universal.sh  meson.build  meson_options.txt  x64-build.txt
scripts/: bundle.py
scripts/patch/: globo  meson.build
